--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Yeasin Shamim",
   "license": "ISC",
   "devDependencies": {
     "typescript": "^5.0.4"
