--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "lint:check": "eslint --ignore-path .eslintignore --ext .js,.ts .",
     "lint:fix": "eslint --fix",
     "prettier:check": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
+    "lint:prettier": "pnpm lint:check && pnpm prettier:check",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Yeasin Shamim",
   "license": "ISC",
+  "lint-staged": {
+    "src/**/*.ts": "pnpm lint:prettier"
+  },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
@@ -21,6 +25,7 @@
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
