--- a/.eslintrc
+++ b/.eslintrc
@@ -13,11 +13,11 @@
 
   "rules": {
     "no-unused-vars": "error",
-    "no-console": "error",
+    // "no-console": "error",
     "no-undef": "error",
     "no-unused-expressions": "error",
-    "no-unreachable": "error",
-    "consistent-type-definitions": ["error", "type"]
+    "no-unreachable": "error"
+    // "consistent-type-definitions": ["error", "type"]
   },
 
   "env": {
